<resources>
    <string name="app_name">Timetable</string>
    <string name="student_info">Информация о студенте</string>
    <string name="interface.lesson.first">08:30 – 09:15</string>
    <string name="interface.lesson.second">09:20 – 10:05</string>
    <string name="interface.lesson.third">10:20 – 11:05</string>
    <string name="interface.lesson.fourth">11:10 – 11:55</string>
    <string name="interface.lesson.fifth">12:10 – 12:55</string>
    <string name="interface.lesson.sixth">13:00 – 13:45</string>
    <string name="interface.lesson.seventh">14:10 – 14:55</string>
    <string name="interface.lesson.eighth">15:00 – 15:45</string>
    <string name="interface.lesson.ninth">15:55 – 16:40</string>
    <string name="interface.lesson.tenth">16:45 – 17:30</string>
    <string name="interface.lesson.eleventh">17:30 – 18:15</string>
    <string name="interface.lesson.twelfth">18:20 – 19:05</string>
    <string name="numeric.1">1</string>
    <string name="numeric.2">2</string>
    <string name="numeric.3">3</string>
    <string name="numeric.4">4</string>
    <string name="numeric.5">5</string>
    <string name="numeric.6">6</string>
    <string name="str_add_student">Добавить ученика</string>
    <string name="hours_ped_pr">Часов пед.пр.</string>
    <string name="surname_name">Фамилия И.</string>
    <string name="add">Добавить</string>
    <string name="course">Курс</string>
    <string name="tvSpecHours">Часов спец.</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="mon">Пн</string>
    <string name="tue">Вт</string>
    <string name="wed">Ср</string>
    <string name="thu">Чт</string>
    <string name="fri">Пт</string>
    <string name="sat">Сб</string>
    <string name="allowed_chars">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZабвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ .</string>
    <string name="all_schedule">Общее расписание</string>
    <string name="students">Ученики</string>
    <string name="formatschedule">Сформировать расписание</string>
    <string name="_lessons_days">Уроки // Дни</string>
    <string name="self_sched">Преподаватель</string>
    <string name="action_delete">Очистить общее расписание</string>
    <string name="wipe_all_students">Удалить всех учеников</string>
    <string name="days_mon">Пн</string>
    <string name="days.tue">Вт</string>
    <string name="days_wed">Ср</string>
    <string name="days.thu">Чт</string>
    <string name="days.fri">Пт</string>
    <string name="days.sat">Сб</string>
    <string name="days.mon.I">Пн I</string>
    <string name="days.wed.I">Ср I</string>
    <string name="days.thu.I">Чт I</string>
    <string name="days.fri.I">Пт I</string>
    <string name="days.sat.I">Сб I</string>
    <string name="num.II">II</string>
    <string name="days.mon.II">Пн II</string>
    <string name="days.tue.II">Вт II</string>
    <string name="days.wed.II">Ср II</string>
    <string name="days.thu.II">Чт II</string>
    <string name="days.fri.II">Пт II</string>
    <string name="days.sat.II">Сб II</string>
    <string name="num.III">III</string>
    <string name="days.mon.III">Пн III</string>
    <string name="days.tue.III">Вт III</string>
    <string name="days.wed.III">Ср III</string>
    <string name="days.thu.III">Чт III</string>
    <string name="days.fri.III">Пт III</string>
    <string name="days.sat.III">Сб III</string>
    <string name="num.IV">IV</string>
    <string name="days.mon.IV">Пн IV</string>
    <string name="days.tue.IV">Вт IV</string>
    <string name="days.wed.IV">Ср IV</string>
    <string name="days.thu.IV">Чт IV</string>
    <string name="days.fri.IV">Пт IV</string>
    <string name="days.sat.IV">Сб IV</string>
</resources>
