<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".StudentSchedule">

    <Button
        android:id="@+id/btn_mon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvStudentEdit"
        android:layout_alignStart="@+id/tvStudentEdit"
        android:layout_below="@+id/tvStudentEdit"
        android:text="@string/mon" />

    <Button
        android:id="@+id/btn_tue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_mon"
        android:layout_alignStart="@+id/btn_mon"
        android:layout_below="@+id/btn_mon"
        android:text="@string/tue" />

    <Button
        android:id="@+id/btn_wed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_tue"
        android:layout_alignStart="@+id/btn_tue"
        android:layout_below="@+id/btn_tue"
        android:text="@string/wed" />

    <Button
        android:id="@+id/btn_thu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_mon"
        android:layout_toEndOf="@+id/btn_mon"
        android:layout_toRightOf="@+id/btn_mon"
        android:text="@string/thu" />

    <Button
        android:id="@+id/btn_fri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_wed"
        android:layout_toEndOf="@+id/btn_tue"
        android:layout_toRightOf="@+id/btn_tue"
        android:text="@string/fri" />

    <Button
        android:id="@+id/btn_sat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_wed"
        android:layout_toEndOf="@+id/btn_wed"
        android:layout_toRightOf="@+id/btn_wed"
        android:text="@string/sat" />

    <TextView
        android:id="@+id/tvStudentEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="Фамилия И., № курс" />

    <TextView
        android:id="@+id/tvSpecHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_thu"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/btn_thu"
        android:layout_toRightOf="@+id/btn_thu"
        android:onClick="onSpecViewClick"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="spec hours" />

    <TextView
        android:id="@+id/tvPracHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_fri"
        android:layout_alignLeft="@+id/tvSpecHour"
        android:layout_alignStart="@+id/tvSpecHour"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone"
        tools:text="practice hours" />

</RelativeLayout>
