<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".StudentsAll">

    <Spinner
        android:id="@+id/spinnerStudents"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btn_to_add_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/spinnerStudents"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/spinnerStudents"
        android:layout_below="@+id/spinnerStudents"
        android:layout_marginTop="36dp"
        android:text="@string/str_add_student" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/spinnerStudents"
        android:layout_toRightOf="@+id/spinnerStudents"
        android:text="@string/edit" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/btn_edit"
        android:layout_toRightOf="@+id/btn_edit"
        android:text="@string/delete" />

</RelativeLayout>
